--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,9 +11,12 @@ plugins {
     id 'application'
 }
 
-repositories {
-    // Use JCenter for resolving dependencies.
-    jcenter()
+allprojects {
+    repositories {
+        mavenLocal()
+        jcenter()
+        maven { url "https://jitpack.io" }
+    }
 }
 
 dependencies {
@@ -22,6 +25,7 @@ dependencies {
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:29.0-jre'
+    implementation 'com.github.idrissrio:cli-table:a79c947372'
 }
 
 
